<resources>
    <string name="app_name">Crocodile</string>
    <string name="description"> YOUR_DESCRIPTION_HERE </string>
    <string name="title"> Категории </string>
    <string name="movie"> Фильмы </string>
    <string name="work"> Работа </string>
    <string name="item"> Предмет </string>
    <string name="cartoon"> Мультфильмы </string>
    <string name="text"> КРОКОДИЛ </string>
    <string name="menu"> MENU </string>
    <string name="number"> two </string>
    <string name="Легкий"> Легкий </string>
    <string name="Средний"> Средний </string>
    <string name="Тяжелый"> Сложный </string>
    <string name="Сложность"> Сложность </string>
    <string name="Закрыть"> Закрыть </string>
    <string name="exit"> Выход </string>
    <string name="instructions"> Инструкция </string>
    <string name="PlayGame"> Начать игру </string>

</resources>