<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

<item android:title="@string/title" >
<menu>
<item android:id="@+id/movie" android:title="@string/movie" android:icon="@drawable/movie" />
<item android:id="@+id/carton" android:title="@string/cartoon" android:icon="@drawable/cartoon"/>
<item android:id="@+id/items" android:title="@string/item" android:icon="@drawable/item"/>
<item android:id="@+id/work" android:title="@string/work" android:icon="@drawable/work"/>
</menu>
</item>
    <item android:title="Уровни сложности" >
        <menu>
            <item android:id="@+id/easy" android:title="@string/Легкий" android:icon="@drawable/mouse" />
            <item android:id="@+id/average" android:title="@string/Средний" android:icon="@drawable/cat"/>
            <item android:id="@+id/hard" android:title="@string/Тяжелый" android:icon="@drawable/dog"/>

        </menu>
    </item>
</menu>